src/app/header/header.component.scss
.l-navbar {
  &__header {
    padding-block: clamp(1.5rem, 2vw, 3rem);

    position: relative;

    background-color: var(--secondary-color);

    transition: padding-block 0.35s ease-in-out,
      inset-block-start 0.35s ease-in-out,
      inset-inline 0.35s ease-in-out;

    &.js-scrollable {
      padding-block: clamp(1rem, 0.9vw, 1.75rem);

      position: fixed;
      inset-block-start: 0;
      inset-inline: 0;
    }
  }

  &__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__toggler {
    inline-size: 1.75rem;

    display: flex;
    flex-direction: column;
    gap: 0.25rem;

    cursor: pointer;

    @media only screen and (min-width: 767px) {
      display: none;
    }
  }

  &__bar {
    inline-size: 100%;
    block-size: 0.2rem;

    border-radius: 99rem;

    display: block;

    background-color: var(--neutral-50);
  }

  &__logo {
    font-size: var(--fs-xl);
  }

  &__logo,
  &__link {
    font-weight: var(--fw-700);
    text-transform: uppercase;
    text-decoration: none;

    color: var(--neutral-50);
  }

  &__link {
    padding-block: 0.25rem;
    padding-inline: 0.75rem;

    display: flex;
    justify-content: center;
    align-items: center;

    cursor: pointer;

    @media screen and (min-width: 767px) {
      padding-block: 0.75rem;
    }

    &.is-current-router {
      border-radius: 0.5rem;

      background-color: var(--main-color);
      color: var(--neutral-50);
    }

    @media only screen and (min-width: 767px) {
      display: block;
    }
  }

  &__list {
    inline-size: 100%;

    padding-block-end: 2rem;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;

    position: absolute;
    inset-inline: 0;
    inset-block-start: 80%;

    background-color: var(--secondary-color);

    visibility: hidden;
    opacity: 0;

    transition: inset-block-start 0.35s ease-in-out,
      visibility 0.35s ease-in-out,
      opacity 0.35s ease-in-out;

    &.js-show {
      inset-block-start: 100%;

      visibility: visible;
      opacity: 1;
    }

    @media only screen and (min-width: 767px) {
      inline-size: auto;

      padding-block: 0;

      position: static;

      flex-direction: row;
      gap: 2rem;

      visibility: visible;
      opacity: 1;
    }
  }

  &__item {
    text-align: center;
  }
}

